# mistake_book

./: .gitignore
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/ai/: llm.py  ocr.py  prompts.py  stt.py  tts.py
backend/app/api/: deps.py
backend/app/api/routes/: mistakes.py  ocr.py  reviews.py  study_plan.py  tutor.py
backend/app/db/: database.py
backend/app/models/: mistake.py  plan.py  tutor.py
backend/app/schemas/: mistake.py
backend/app/services/: analysis.py  mistake.py  plan.py  review.py  tutor.py
backend/migrations/: env.py
backend/migrations/versions/: d044c678b789_add_review_fields.py  da90f4457c97_init.py  f6375221e9a1_add_grade.py
frontend/: .env.example  .metadata  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app.dart  main.dart
frontend/lib/core/api/: api_client.dart  api_config.dart  mistake_api.dart  ocr_api.dart  plan_api.dart  review_api.dart  tutor_api.dart
frontend/lib/core/models/: mistake.dart
frontend/lib/core/providers/: mistake_provider.dart  plan_provider.dart
frontend/lib/features/mistakes/screens/: mistake_add_screen.dart  mistake_list_screen.dart
frontend/lib/features/review/screens/: review_screen.dart
frontend/lib/features/study_plan/screens/: plan_screen.dart
frontend/lib/features/tutor/screens/: tutor_screen.dart
frontend/lib/shared/theme/: app_theme.dart
frontend/test/: widget_test.dart
(+1 files in other folders)
